--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -1,16 +1,47 @@
   <!DOCTYPE html>
   <html>
     <head>
-      <style>
-        button {
-          height: 30px;
-          width: 30px;
-          outline: none;
-        }
-      </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+    .accordion {
+        background-color: #eee;
+        color: #444;
+        cursor: pointer;
+        padding: 18px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+        transition: 0.4s;
+    }
+
+    .active, .accordion:hover {
+        background-color: #ccc;
+    }
+
+    .panel {
+        padding: 0 18px;
+        background-color: white;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.2s ease-out;
+    }
+    </style>
     </head>
     <body>
-      <button id="changeColor"></button>
-      <script src="popup.js"></script>
+      <h2>Ethicaly</h2>
+      <p>Company name here and things...</p>
+
+      <button class="accordion">Praises</button>
+      <div class="panel">
+        <p>We need to insert a table here...</p>
+      </div>
+
+      <button class="accordion">Criticism</button>
+      <div class="panel">
+        <p>We need to insert a table here...</p>
+      </div>
+
     </body>
   </html>
