--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -1,5 +1,5 @@
   <!DOCTYPE html>
-  <html>
+  <html style="width: 320px">
     <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
