added data, fixed name, cleanup of background.js

--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -30,7 +30,7 @@
     </style>
     </head>
     <body>
-      <h2>Ethicaly</h2>
+      <h2>Ethicly</h2>
       <p>Company name here and things...</p>
 
       <button class="accordion">Praises</button>
