basics of adding from a list to the praises list, bug on the appendChild function

--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -35,12 +35,18 @@
 
       <button class="accordion">Praises</button>
       <div class="panel">
-        <p>We need to insert a table here...</p>
+      <ul id="Praise_Dynamic_List">
+      </ul>
+        
       </div>
 
       <button class="accordion">Criticism</button>
       <div class="panel">
-        <p>We need to insert a table here...</p>
+        <li>Entry 1</li>
+        <li>Entry 2</li>
+        <li>Entry 3</li>
+        <li>Entry 4</li>
+        <li>Entry 5</li>
       </div>
        <script src="popup.js"></script>
 
