--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -37,16 +37,11 @@
       <div class="panel">
       <ul id="Praise_Dynamic_List">
       </ul>
-        
       </div>
 
       <button class="accordion">Criticism</button>
       <div class="panel">
-        <li>Entry 1</li>
-        <li>Entry 2</li>
-        <li>Entry 3</li>
-        <li>Entry 4</li>
-        <li>Entry 5</li>
+        <ul id="Cristisim_Dynamic_List">
       </div>
        <script src="popup.js"></script>
 
