--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -45,5 +45,7 @@
       </div>
        <script src="popup.js"></script>
 
+       <label id="Phrase_Section">Phrase about grade goes here</label>
+
     </body>
   </html>
