--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -1,33 +1,8 @@
   <!DOCTYPE html>
   <html style="width: 320px">
     <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-    .accordion {
-        background-color: #eee;
-        color: #444;
-        cursor: pointer;
-        padding: 18px;
-        width: 100%;
-        border: none;
-        text-align: left;
-        outline: none;
-        font-size: 15px;
-        transition: 0.4s;
-    }
-
-    .active, .accordion:hover {
-        background-color: #ccc;
-    }
-
-    .panel {
-        padding: 0 18px;
-        background-color: white;
-        max-height: 0;
-        overflow: hidden;
-        transition: max-height 0.2s ease-out;
-    }
-    </style>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
       <h2>Ethicly</h2>
@@ -43,9 +18,7 @@
       <div class="panel">
         <ul id="Cristisim_Dynamic_List">
       </div>
-       <script src="popup.js"></script>
-
        <label id="Phrase_Section">Phrase about grade goes here</label>
-
     </body>
+    <script src="js/popup.js"></script>
   </html>
