--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -1,24 +1,44 @@
   <!DOCTYPE html>
   <html style="width: 320px">
-    <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-      <h2>Ethicly</h2>
-      <p>Company name here and things...</p>
-
-      <button class="accordion">Praises</button>
-      <div class="panel">
-      <ul id="Praise_Dynamic_List">
-      </ul>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="row logo-back shadow-body">
+      <img class="logo" src="images/p_logo.png"/>
+    </div>
+    <div class="row">
+      <div class="col-sm-8 brand-fix">
+        <h3>Nike</h3>
+        <p>Shoe store</p>
       </div>
-
-      <button class="accordion">Criticism</button>
-      <div class="panel">
-        <ul id="Cristisim_Dynamic_List">
+      <div class="col-sm-2 brand-fix">
+        <img src="images/grade.png"/>
       </div>
-       <label id="Phrase_Section">Phrase about grade goes here</label>
+    </div>
+    <div class="col-md-12 move-up brand-fix">
+      <div class="row fit-buttons">
+        <button class="accordion roundbox" style="background-color: #71C17A;">Praises</button>
+        <div class="panel">
+          <ul id="Praise_Dynamic_List">
+          </ul>
+        </div>
+      </div>
+      <div class="row fit-buttons">
+        <button class="accordion roundbox" style="background-color: #FA5D5B;">Criticism</button>
+          <div class="panel">
+            <ul id="Cristisim_Dynamic_List">
+            </ul>
+          </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-8 phrase-fix">
+        <p>Phrase about grade goes here</p>
+      </div>
+    </div>
     </body>
     <script src="js/popup.js"></script>
   </html>
