added nike mock data

--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -20,14 +20,18 @@
     </div>
     <div class="col-md-12 move-up brand-fix">
       <div class="row fit-buttons">
-        <button class="accordion roundbox" style="background-color: #71C17A;">Praises</button>
+        <button class="accordion roundbox" style="background-color: #71C17A;">Praises
+          <span id="Praise_Count"></span>
+        </button>
         <div class="panel">
           <ul id="Praise_Dynamic_List">
           </ul>
         </div>
       </div>
       <div class="row fit-buttons">
-        <button class="accordion roundbox" style="background-color: #FA5D5B;">Criticism</button>
+        <button class="accordion roundbox" style="background-color: #FA5D5B;">Criticism
+          <span id="Criticism_Count"></span>
+        </button>
           <div class="panel">
             <ul id="Cristisim_Dynamic_List">
             </ul>
