--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -10,35 +10,30 @@
       <img class="logo" src="images/p_logo.png"/>
     </div>
     <div class="row">
-      <div class="col-sm-8 brand-fix">
-        <h3>Nike</h3>
-        <p>Shoe store</p>
+      <div class="brand-fix-left">
+        <h3 class="font-name">Nike</h3>
+        <p class="font-description">Shoe store</p>
       </div>
-      <div class="col-sm-2 brand-fix">
+      <div class="brand-fix-right">
         <img src="images/grade.png"/>
       </div>
     </div>
-    <div class="col-md-12 move-up brand-fix">
+    <div class="col-md-12 move-up">
       <div class="row fit-buttons">
-        <button class="accordion roundbox" style="background-color: #71C17A;">Praises</button>
-        <div class="panel">
+        <button class="accordion font-praises box-praises">Praises</button>
+        <div class="panel font-list ">
           <ul id="Praise_Dynamic_List">
           </ul>
         </div>
       </div>
       <div class="row fit-buttons">
-        <button class="accordion roundbox" style="background-color: #FA5D5B;">Criticism</button>
-          <div class="panel">
+        <button class="accordion font-critism box-critism">Criticism</button>
+          <div class="panel font-list ">
             <ul id="Cristisim_Dynamic_List">
             </ul>
           </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-sm-8 phrase-fix">
-        <p>Phrase about grade goes here</p>
-      </div>
-    </div>
-    </body>
+  </body>
     <script src="js/popup.js"></script>
   </html>
