fixed list and updated logo

--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -15,21 +15,21 @@
         <p class="font-description">Shoe store</p>
       </div>
       <div class="brand-fix-right">
-        <img src="images/grade.png"/>
+        <img src="images/regularRankings/A_button.png"/>
       </div>
     </div>
     <div class="col-md-12 move-up">
       <div class="row fit-buttons">
         <button class="accordion font-praises box-praises">Praises</button>
-        <div class="panel font-list ">
+        <div class="panel font-list">
           <ul id="Praise_Dynamic_List">
           </ul>
         </div>
       </div>
       <div class="row fit-buttons">
         <button class="accordion font-critism box-critism">Criticism</button>
-          <div class="panel font-list ">
-            <ul id="Cristisim_Dynamic_List">
+          <div class="panel font-list">
+            <ul id="Cristism_Dynamic_List">
             </ul>
           </div>
       </div>
