added count circles

--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -20,14 +20,23 @@
     </div>
     <div class="col-md-12 move-up">
       <div class="row fit-buttons">
-        <button class="accordion font-praises box-praises">Praises</button>
+        <button class="accordion font-praises box-praises">
+          Praises
+          <div class="praise-circle">
+            <div id="Praise_Count"></div>
+          </div>
+      </button>
         <div class="panel font-list">
           <ul id="Praise_Dynamic_List">
           </ul>
         </div>
       </div>
       <div class="row fit-buttons">
-        <button class="accordion font-critism box-critism">Criticism</button>
+        <button class="accordion font-critism box-critism">
+          Criticisms
+          <div class="criticism-circle">
+            <div id="Criticism_Count">
+        </button>
           <div class="panel font-list">
             <ul id="Cristism_Dynamic_List">
             </ul>
