extension window dynamically populates.  Need to fix formatting for grade icon

--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -11,11 +11,11 @@
     </div>
     <div class="row">
       <div class="brand-fix-left">
-        <h3 class="font-name">Nike</h3>
-        <p class="font-description">Shoe store</p>
+        <h3 class="font-name" id="Company_Title"></h3>
+        <p class="font-description"></p>
       </div>
       <div class="brand-fix-right">
-        <img src="images/regularRankings/A_button.png"/>
+        <img id="Rating_Img" src="images/regularRankings/A_button.png"/>
       </div>
     </div>
     <div class="col-md-12 move-up">
@@ -35,7 +35,7 @@
         <button class="accordion font-critism box-critism">
           Criticisms
           <div class="criticism-circle">
-            <div id="Criticism_Count">
+            <div id="Criticism_Count"></div>
         </button>
           <div class="panel font-list">
             <ul id="Cristism_Dynamic_List">
