--- a/EthicalShopping/EthicalShopping/app/options.html
+++ b/EthicalShopping/EthicalShopping/app/options.html
@@ -1,1 +1,44 @@
-//Possible for use later
+  <!DOCTYPE html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  </head>
+  <body class="profile-alginment">
+	<div class="row">
+   <h3 class="profile-title">Consumer Profile</h3>
+   <p class="profile-detail-text">Let's adjust ethicly to your consumption habits and goals.</p>
+	</div>
+	<div class="row">
+		<p class="profile-sentence-text">Most of my purchases are</p>
+		<div class="product-dropdown"> 
+		 	<button class="product-dropbtn"></button>
+		  <div class="product-content">
+		    <a >clothing/accessories</a>
+		    <a >consumer electronics</a>
+		    <a >home goods</a>
+		    <a >a mix of</a>
+		  </div>
+		</div>
+		 <p class="profile-sentence-text">products, and I want to have more positive</p>
+		<div class="impact-dropdown">
+		 	<button class="impact-dropbtn"></button>
+		  <div class="impact-content">
+		    <a >environmental</a>
+		    <a >human rights</a>
+		    <a >animal ethics</a>
+		    <a >overall</a>
+		  </div>
+		</div>
+		<p class="profile-sentence-text">impact.</p>
+	<div class="row">
+		<div class="col-md-12 text-center"> 
+	 		<button>"Let's go!"</button>
+	 	</div>
+	 	<div class="col-md-12 text-center"> 
+	 		<button>"Skip"</button>
+	 	</div>
+	</div>
+  </body>
+    <script src="js/options.js"></script>
+ </html>
