updated redirect site and more user input

--- a/EthicalShopping/EthicalShopping/app/options.html
+++ b/EthicalShopping/EthicalShopping/app/options.html
@@ -6,8 +6,8 @@
   </head>
   <body class="profile-alginment">
 	<div class="row">
-   <h3 class="profile-title">Consumer Profile</h3>
-   <p class="profile-detail-text">Let's adjust ethicly to your consumption habits and goals.</p>
+   		<h3 class="profile-title">Consumer Profile</h3>
+   		<p class="profile-detail-text">Let's adjust ethicly to your consumption habits and goals.</p>
 	</div>
 	<div class="row">
 		<p class="profile-sentence-text">Most of my purchases are</p>
@@ -20,7 +20,8 @@
 		    <a >a mix of</a>
 		  </div>
 		</div>
-		 <p class="profile-sentence-text">products, and I want to have more positive</p>
+		<p class="profile-sentence-text">products,</p>
+		<p class="profile-sentence-text">and I want to have more positive</p>
 		<div class="impact-dropdown">
 		 	<button class="impact-dropbtn"></button>
 		  <div class="impact-content">
@@ -31,12 +32,15 @@
 		  </div>
 		</div>
 		<p class="profile-sentence-text">impact.</p>
+	</div>
 	<div class="row">
 		<div class="col-md-12 text-center"> 
-	 		<button>"Let's go!"</button>
+	 		<button class="profile-continue">Continue</button>
 	 	</div>
+	 </div>
+	 <div class="row">
 	 	<div class="col-md-12 text-center"> 
-	 		<button>"Skip"</button>
+	 		<button class="profile-skip">Skip</button>
 	 	</div>
 	</div>
   </body>
