fixed tab expansions

--- a/EthicalShopping/EthicalShopping/app/popup.html
+++ b/EthicalShopping/EthicalShopping/app/popup.html
@@ -1,5 +1,5 @@
   <!DOCTYPE html>
-  <html style="width: 320px">
+  <html style="width: 320px; max-height: 500px">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-12 move-up">
       <div class="row fit-buttons">
-        <button class="accordion font-praises box-praises">
+        <button class="accordion font-praises box-praises" id="Praise_Box">
           Praises
           <div class="praise-circle">
             <div id="Praise_Count"></div>
@@ -32,7 +32,7 @@
         </div>
       </div>
       <div class="row fit-buttons">
-        <button class="accordion font-critism box-critism">
+        <button class="accordion font-critism box-critism" id="Criticism_Box">
           Criticisms
           <div class="criticism-circle">
             <div id="Criticism_Count"></div>
