just some more additions to the user perference screen

--- a/EthicalShopping/EthicalShopping/app/options.html
+++ b/EthicalShopping/EthicalShopping/app/options.html
@@ -1,4 +1,5 @@
   <!DOCTYPE html>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -7,28 +8,28 @@
   <body class="profile-alginment">
 	<div class="row">
    		<h3 class="profile-title">Consumer Profile</h3>
-   		<p class="profile-detail-text">Let's adjust ethicly to your consumption habits and goals.</p>
+   		<p class="profile-detail-text">Let's adjust Ethicly to your consumption habits and goals.</p>
 	</div>
-	<div class="row">
+	<div class="row row-details ">
 		<p class="profile-sentence-text">Most of my purchases are</p>
 		<div class="product-dropdown"> 
 		 	<button class="product-dropbtn"></button>
 		  <div class="product-content">
-		    <a >clothing/accessories</a>
-		    <a >consumer electronics</a>
-		    <a >home goods</a>
-		    <a >a mix of</a>
+		    <li><a href="#">clothing/accessories</a></li>
+		    <li><a href="#">consumer electronics</a></li>
+		    <li><a href="#">home goods</a></li>
+		    <li><a href="#">a mix of</a></li>
 		  </div>
 		</div>
-		<p class="profile-sentence-text">products,</p>
+		<p class="profile-sentence-text ">products,</p>
 		<p class="profile-sentence-text">and I want to have more positive</p>
 		<div class="impact-dropdown">
 		 	<button class="impact-dropbtn"></button>
 		  <div class="impact-content">
-		    <a >environmental</a>
-		    <a >human rights</a>
-		    <a >animal ethics</a>
-		    <a >overall</a>
+		    <li><a href="#">environmental</a></li>
+		    <li><a href="#">human rights</a></li>
+		    <li><a href="#">animal ethics</a></li>
+		    <li><a href="#">overall</a></li>
 		  </div>
 		</div>
 		<p class="profile-sentence-text">impact.</p>
@@ -40,7 +41,7 @@
 	 </div>
 	 <div class="row">
 	 	<div class="col-md-12 text-center"> 
-	 		<button class="profile-skip">Skip</button>
+	 		<a class="profile-skip">Skip</a>
 	 	</div>
 	</div>
   </body>
